Fri Jul 10 18:46:27 1998  Per Bothner  <bothner@cygnus.com>

	* polytype.scm:  From Marc Feeley <feeley@IRO.UMontreal.CA>:
	I've just found a problem with "polytype.scm".  The numbering of the
	type variables returned depends on the argument evaluation order (and
	also the order that "map" calls the function).  Here is the new
	version of the program which fixes these problems.

Fri Jul 10 18:11:41 1998  Per Bothner  <bothner@cygnus.com>

	* polytype.scm:  Merge with updated version from Feeley.

Mon Jun 29 17:59:06 1998  Per Bothner  <bothner@cygnus.com>

	* test.scm:  Merged some more code from Jaffar's version.
	* testing.scm:  Add a work-around for a namespace pollution conflict.

	* polytype.scm: New test, originally written by Marc Feeley.
	* Makefile.am, Makefile.in: Upadte for new test.

Sun May 24 12:26:50 1998  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Added some exact->inexact tests.

Tue Apr 28 21:43:52 1998  Per Bothner  <bothner@cygnus.com>

	* misc-test.scm:  Added test for nested try-finally from
	<Hallvard.Traetteberg@idi.ntnu.no>.

Tue Feb 24 23:08:41 1998  Per Bothner  <bothner@cygnus.com>

	* obj-test.scm:  Add tests for make, (record 'field), and set!.

Thu Feb 19 19:33:57 1998  Per Bothner  <bothner@cygnus.com>

	* misc-test.scm:  Add tests for new-line (CR and CRLF) handling.

Tue Jan 27 11:48:50 1998  Per Bothner  <bothner@cygnus.com>

	* misc-test.scm:  Add tests for try-catch, catch, and throw.

Tue Jan 20 10:26:42 1998  Alberto Petrofsky  <albatros@wco.com>

	* misc-test.scm: Add some reader regression tests.

Mon Jan 19 17:09:38 1998  Per Bothner  <bothner@cygnus.com>

	* num-test.scm:  Add some more regression tests.

Sun Dec 14 17:02:02 1997  Per Bothner  <bothner@cygnus.com>

	* Update for symbol-read-case, defaulting to 'P.

	* num-test.scm:  Added two tests from Norman Hardy <norm@netcom.com>.
	* misc-test.scm:  Add a repression test that used to cause bad warning.