@@ -1,4 +1,4 @@
-(test-init "Miscellaneous")
+(test-init "Miscellaneous" 54)
 
 ;;; DSSSL spec example 11
 (test '(3 4 5 6) (lambda x x) 3 4 5 6)
@@ -130,3 +130,54 @@
 		    (with-content (view type: text))))
 
 
+(section "closures")
+
+(define (f1 a)
+  (define (f2 b)
+    (cons a b))
+  (cons a f2))
+(define f1-100 (f1 100))
+(define f2-20 ((cdr f1-100) 20))
+(test 100 'closure-f2-car (car f2-20))
+(test 20 'closure-f2-cdr (cdr f2-20))
+
+(define (f3 a)
+  (define (f4 b)
+    (cons a b))
+  (define (f5 c)
+    (cons a c))
+  (cons a f5))
+(define f3-10 (f3 10))
+(define f4-20 ((cdr f3-10) 20))
+(define f5-33 ((cdr f3-10) 33))
+(test '(10 . 20) 'closure-f4-20 f4-20)
+(test '(10 . 33) 'closure-f5-33 f5-33)
+
+(define (f6 a)
+  (define (f7 b)
+    (define (f8 c)
+      (define (f9 d)
+        (list a b c d))
+      (list a b c f9))
+    (list a b f8))
+  (list a f7))
+(define f6-100 (f6 100))
+(define f7-20 ((cadr f6-100) 20))
+(define f8-10 ((caddr f7-20) 10))
+(test '(100 20 10 2) 'closure-test3 ((cadddr f8-10) 2))
+
+(define (f6 a)
+  (define (x6 b) a)
+  (define (f7 b)
+    (define (x7 c) b)
+    (define (f8 c)
+      (define (x8 d) c)
+      (define (f9 d)
+        (list a b c d))
+      (list a b c f9))
+    (list a b f8))
+  (list a f7))
+(define f6-100 (f6 100)) 
+(define f7-20 ((cadr f6-100) 20)) 
+(define f8-10 ((caddr f7-20) 10)) 
+(test '(100 20 10 2) 'closure-test4 ((cadddr f8-10) 2)) 
